# devkit

./: .editorconfig  .gitignore  README.md  cliff.toml  coveragerc.toml  dprint.json  mise.toml  pkglink.config.yaml  poe_tasks.toml  pyproject.toml  repolish.yaml  ruff.toml  toolbelt.yaml  uv-toolbox.yaml  zensical.toml
.github/workflows/: __python_python-checks.yaml  __releez_lint-pr-title.yaml  __releez_publish.yaml  __releez_validate-release.yaml  __workspace_deploy-docs.yaml  __workspace_repo-checks.yaml  _ci-checks.yaml  ci-checks.yaml  deploy-docs.yaml  finalize-release.yaml  lint-pr-title.yaml  validate-release.yaml
devkit/: github_utils.py
devkit/resources/: pkglink.yaml
devkit/resources/configs/: dprint.json
devkit/resources/poe/: ci-checks.toml  dev-setup.toml  formatters.toml
devkit/resources/templates/: repolish.py
devkit/resources/templates/repolish/: .gitignore  LICENSE  mise.toml
devkit/resources/templates/repolish/.github/workflows/: ci-checks.yaml
devkit/resources/toolbelt/: dprint.yaml  toolbelt.yaml
docs/: adopting-devkit.md  index.md
docs/architecture/: mise-tasks.md  providers.md  repolish-mechanics.md
docs/ci/: reusable-workflows.md
mise-tasks/: publish
mise-tasks/python/: uv-sync
mise-tasks/releez/: release-start
tests/: test_anchors.py  test_generated_headers.py  test_python_provider.py  test_releez_provider.py  test_workspace_provider.py  test_workspace_tasks.py
