[project]
name = "devkit"
version = "0.0.0"
description = "A guide to coding practices and standards for hotdog-werx"
authors = [{ name = "hotdog-werx" }]
readme = "README.md"
license = 'MIT'
requires-python = ">=3.11"

dependencies = []

[tool.hatch]
build.packages = ["devkit"]
metadata.allow-direct-references = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
