[project]
name = "devkit"
version = "0.0.0"
description = "Shared repolish providers, mise tasks, and CI workflows for hotdog-werx repos"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = []

[tool.uv]
package = false

[tool.uv.workspace]
members = ["packages/*"]

[dependency-groups]
dev = [
  "pytest >= 9.0.2",
  "pytest-mock >= 3.14.1",
  "pytest-cov >= 6.2.1",
  "ty >= 0.0.16",
]
